--- a/SCSS/ITS Theme/Alternate Checkboxes/_Theme Specific Fixes.scss
+++ b/SCSS/ITS Theme/Alternate Checkboxes/_Theme Specific Fixes.scss
@@ -7,7 +7,9 @@
     //background: transparent;
     //position: relative;
     font-weight: 10;
-    vertical-align: 0px;
+}
+.markdown-source-view.mod-cm6 .task-list-item-checkbox {
+    vertical-align: middle; //Primary
 }
 
 /*Fixes*/
